Continued adding documentation

--- a/docs/content/api-overview.mdx
+++ b/docs/content/api-overview.mdx
@@ -27,24 +27,24 @@ Provides access to the following:
 
 | API | Description | Platforms |
 | --- | --- | --- | 
-| [isBluetoothEnabled]() | Determine whether device has enabled Bluetooth | <IoLogoAndroid/> <IoLogoApple/> |
-| [getBondedDevices]() | List currently paired/bonded devices | <IoLogoAndroid/> <IoLogoApple/> |
-| [getConnectedDevices]() | List currently connected devices | <IoLogoAndroid/> <IoLogoApple/> |
-| [getConnectedDevice]() | Retrieves a connected `BluetoothDevice` | <IoLogoAndroid/> <IoLogoApple/> |
-| [onBluetoothEnabled]() | Provide a listener for Bluetooth enabled events | <IoLogoAndroid/> <IoLogoApple/> |
-| [onBluetoothDisabled]() | Provide a listener for Bluetooth disabled events | <IoLogoAndroid/> <IoLogoApple/> |
-| [onStateChanged]() | Provides a listener for Bluetooth state change events | <IoLogoAndroid/> <IoLogoApple/> |
-| [onDeviceConnected]() | Provide a listener for when a device connection is initiated | <IoLogoAndroid/> <IoLogoApple/> |
-| [onDeviceDisconnected]() | Provide a listener for when a device connection has dropped | <IoLogoAndroid/> <IoLogoApple/> |
-| [onError]() | Provide a listener for any generic errors from Adapter or Device | <IoLogoAndroid/> <IoLogoApple/> |
-| [startDiscovery]() | Initiate the discovery process | <IoLogoAndroid/> |
-| [cancelDiscovery]() | Cancel the discovery process | <IoLogoAndroid/> |
-| [pairDevice]() | Request to pair with a device | <IoLogoAndroid/> |
-| [unpairDevice]() | Request to unapir a device | <IoLogoAndroid/> |
-| [accept]() | Attempt to accept a device connection | <IoLogoAndroid/> |
-| [cancelAccept]() | Cancels accepting a device connection | <IoLogoAndroid/> |
-| [requestBluetoothEnabled]() | Request that the system enable Bluetooth | <IoLogoAndroid/> |
-| [setBluetoothAdapterName]() | Attempt to rename the `BluetoothAdapter` | <IoLogoAndroid/> |
+| [isBluetoothEnabled](/react-native/rn-bluetooth-classic/#isBluetoothEnabled) | Determine whether device has enabled Bluetooth | <IoLogoAndroid/> <IoLogoApple/> |
+| [getBondedDevices](/react-native/rn-bluetooth-classic/#getBondedDevices) | List currently paired/bonded devices | <IoLogoAndroid/> <IoLogoApple/> |
+| [getConnectedDevices](/react-native/rn-bluetooth-classic/#getConnectedDevices) | List currently connected devices | <IoLogoAndroid/> <IoLogoApple/> |
+| [getConnectedDevice](/react-native/rn-bluetooth-classic/#getConnectedDevice) | Retrieves a connected `BluetoothDevice` | <IoLogoAndroid/> <IoLogoApple/> |
+| [onBluetoothEnabled](/react-native/rn-bluetooth-classic/#onBluetoothEnabled) | Provide a listener for Bluetooth enabled events | <IoLogoAndroid/> <IoLogoApple/> |
+| [onBluetoothDisabled](/react-native/rn-bluetooth-classic/#onBluetoothDisabled) | Provide a listener for Bluetooth disabled events | <IoLogoAndroid/> <IoLogoApple/> |
+| [onStateChanged](/react-native/rn-bluetooth-classic/#onStateChanged) | Provides a listener for Bluetooth state change events | <IoLogoAndroid/> <IoLogoApple/> |
+| [onDeviceConnected](/react-native/rn-bluetooth-classic/#onDeviceConnected) | Provide a listener for when a device connection is initiated | <IoLogoAndroid/> <IoLogoApple/> |
+| [onDeviceDisconnected](/react-native/rn-bluetooth-classic/#onDeviceDisconnected) | Provide a listener for when a device connection has dropped | <IoLogoAndroid/> <IoLogoApple/> |
+| [onError](/react-native/rn-bluetooth-classic/#onError) | Provide a listener for any generic errors from Adapter or Device | <IoLogoAndroid/> <IoLogoApple/> |
+| [startDiscovery](/react-native/rn-bluetooth-classic/#startDiscovery) | Initiate the discovery process | <IoLogoAndroid/> |
+| [cancelDiscovery](/react-native/rn-bluetooth-classic/#cancelDiscovery) | Cancel the discovery process | <IoLogoAndroid/> |
+| [pairDevice](/react-native/rn-bluetooth-classic/#pairDevice) | Request to pair with a device | <IoLogoAndroid/> |
+| [unpairDevice](/react-native/rn-bluetooth-classic/#unpairDevice) | Request to unapir a device | <IoLogoAndroid/> |
+| [accept](/react-native/rn-bluetooth-classic/#accept) | Attempt to accept a device connection | <IoLogoAndroid/> |
+| [cancelAccept](/react-native/rn-bluetooth-classic/#cancelAccept) | Cancels accepting a device connection | <IoLogoAndroid/> |
+| [requestBluetoothEnabled](/react-native/rn-bluetooth-classic/#requestBluetoothEnabled) | Request that the system enable Bluetooth | <IoLogoAndroid/> |
+| [setBluetoothAdapterName](/react-native/rn-bluetooth-classic/#setBluetoothAdapterName) | Attempt to rename the `BluetoothAdapter` | <IoLogoAndroid/> |
 
 > The term **connection** refers to an active `socket`; not just being paired/bonded.  Please be aware of this prior to opening any issues.
 
