--- a/docs/content/react-native/rn-bluetooth-device.mdx
+++ b/docs/content/react-native/rn-bluetooth-device.mdx
@@ -3,10 +3,6 @@ title: Bluetooth Device
 description: Connect and communicate with device(s)
 ---
 
-import {
-  ExpansionPanel
-} from 'gatsby-theme-apollo-docs';
-
 The `BluetoothDevice` is where the magic of communicating with your actual devices takes place.  You're always going to be requesting your `BluetoothDevice` from one of the `RNBluetoothClassic` functions.  Once you've got that device (or a saved address which which you can simulate an address) you're good to go.
 
 ```javascript
@@ -20,8 +16,9 @@ import RNBluetoothClassic, {
 
 The following are available on both Android and IOS.
 
-<a name="isConnected"></a>
-<ExpansionPanel title="isConnected(): Promise<boolean>">
+### isConnected
+
+`isConnected(): Promise<boolean>`
 
 Whether or not the current device is connected - note that like everywhere else **connected** means that there is an active `BluetoothSocket` and not just paired.
 
@@ -29,10 +26,9 @@ Whether or not the current device is connected - note that like everywhere else 
 
 - Look into adding an `isPaired()` request that does the same
 
-</ExpansionPanel>
+### connect 
 
-<a name="connect"></a>
-<ExpansionPanel title="connect(options: Map<string,object>): Promise<boolean>">
+`connect(options: Map<string,object>): Promise<boolean>`
 
 Connect to the device.  This will attempt to open a `BluetoothSocket` (or some other connection type based on configuration) using the options provided.
 
@@ -62,10 +58,9 @@ The default connection type is `DelimitedConnectionClientImpl`, provided by the 
 let connected = await connect({ TYPE: "CLIENT" });
 ```
 
-</ExpansionPanel>
+### disconnect
 
-<a name="disconnect"></a>
-<ExpansionPanel title="disconnect(): Promise<boolean>">
+`disconnect(): Promise<boolean>`
 
 Attempts to disconnect from the device.
 
@@ -80,10 +75,9 @@ async disconnect() {
 }
 ```
 
-</ExpansionPanel>
+### available
 
-<a name="available"></a>
-<ExpansionPanel title="available(): Promise<number>">
+`available(): Promise<number>`
 
 Requests how much data is available for read.   Resolves with a number based on the connection type, for example the `DelimitedConnection*Impl`(Java) connections return the number of delimited messages **not the number of bytes** as you might expect.
 
@@ -98,17 +92,15 @@ try {
 }
 ```
 
-</ExpansionPanel>
+### clear
 
-<a name="clear"></a>
-<ExpansionPanel title="clear(): Promise<boolean>">
+`clear(): Promise<boolean>`
 
 Clear all the messages currently in the buffer.  This is really only used for manual reads, as listening to received data would automatically clear.
 
-</ExpansionPanel>
+### read
 
-<a name="read"></a>
-<ExpansionPanel title="read(): Promise<BluetoothMessage>">
+`read(): Promise<BluetoothMessage>`
 
 Reads from the device buffer and returns a `BluetoothMessage` containing information regarding the data.  The amount and type of data is dependant on the native `DeviceConnection`.  The default `DelimitedConnection*Impl` connections return plain strings, encoded/decoded using the requested `Charset`
 
@@ -125,10 +117,9 @@ try {
 
 - Any errors occur during reading
 
-</ExpansionPanel>
+### write
 
-<a name="write"></a>
-<ExpansionPanel title="write(data: string|Buffer)">
+`write(data: string|Buffer)`
 
 Attempts to write to the device.   Like the `read` function, this is completely dependant on the `DeviceConnection` on how this data is written. 
 
@@ -141,10 +132,11 @@ Attempts to write to the device.   Like the `read` function, this is completely 
 - If the `Socket` is closed
 - Any other errors occur while writing
 
-</ExpansionPanel>
+### onDataReceived
 
-<a name="onDataReceived"></a>
-<ExpansionPanel title="onDataReceived(listener: BluetoothEventListener<BluetoothDeviceReadEvent>): BluetoothEventSubscription">
+`onDataReceived(
+  listener: BluetoothEventListener<BluetoothDeviceReadEvent>
+): BluetoothEventSubscription`
 
 Provide a listener for incoming data.  Without adding a listener data will be appended to the buffer and made available for:
 
@@ -175,11 +167,11 @@ async onReceivedData(event: BluetoothReadEvent) {
 
 `BluetoothEventSubscription` which must be used to `remove()` the listener.
 
-</ExpansionPanel>
 
 ## Android API
 
 There are no current Android only API.
+
 
 ## IOS API
 
